--- a/styles.css
+++ b/styles.css
@@ -192,12 +192,12 @@
     color: #fff;
   }
   
-  #instagram {
-    color: #cb2770;
-    border: 1px solid #cb2770;
+  #hackerrank {
+    color: #fbc709;
+    border: 1px solid #fbc709;
   }
-  #instagram:hover {
-    background-color: #cb2770;
+  #hackerrank:hover {
+    background-color: #fbc709;
     color: #fff;
   }
   
